--- a/src/sass/components/index.scss
+++ b/src/sass/components/index.scss
@@ -22,4 +22,4 @@
 @forward "popup-arrow";
 @forward "template-creator";
 @forward "button-icon-and-text";
-@forward "line-graph";
+@forward "tooltip";
