--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2379,9 +2379,61 @@ body {
   grid-column: 1/-4;
 }
 .home-page__weight-input-box {
-  background-color: green;
   grid-row: -5/-1;
   grid-column: -4/-1;
+}
+.home-page__dashboard-box {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 1rem;
+  padding: 3rem;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.05);
+  border: 2px solid transparent;
+  transition: all 0.2s;
+}
+.home-page__dashboard-box:hover {
+  border-color: #03B670;
+}
+.home-page__dashboard-box-title {
+  font-size: 2rem;
+  font-weight: 400;
+  color: #f1f4f2;
+  padding: 1rem 2rem;
+  background-color: #03B670;
+  border-radius: 1rem;
+  box-shadow: 0 0.5rem 2rem rgba(0, 0, 0, 0.1);
+  text-align: center;
+  position: absolute;
+  top: -1.5rem;
+}
+.home-page__weight-input-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  margin-top: 3rem;
+}
+.home-page__weight-input {
+  margin-bottom: 3rem;
+  width: 100%;
+}
+.home-page__weight-button {
+  background-color: #03B670;
+  color: #fff;
+  padding: 4rem 40%;
+  border-radius: 1rem;
+  border: none;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+.home-page__weight-button:hover {
+  background-color: #2FCA82;
+}
+.home-page__weight-button:active {
+  background-color: #03B670;
 }
 
 /*# sourceMappingURL=style.css.map */
