--- a/src/sass/pages/_home-page.scss
+++ b/src/sass/pages/_home-page.scss
@@ -25,10 +25,73 @@
     }
 
     &__weight-input-box {
-        background-color: green;
         grid-row: -5 / -1;
         grid-column: -4 / -1;
 
     }
 
+    // Styling
+
+    &__dashboard-box {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: rgba($color-white, .5);
+        border-radius: 1rem;
+        padding: 3rem;
+        box-shadow: 0 1rem 2rem rgba($color-black, 0.05);
+        border: 2px solid transparent;
+
+        transition: all .2s;
+
+        &:hover {
+            border-color: $color-primary-dark;
+        }
+    }
+
+    &__dashboard-box-title {
+        font-size: 2rem;
+        font-weight: 400;
+        color: $color-grey-light-3;
+        padding: 1rem 2rem;
+        background-color: $color-primary-dark;
+        border-radius: 1rem;
+        box-shadow: 0 .5rem 2rem rgba($color-black, 0.1);
+        text-align: center;
+
+        position: absolute;
+        top: -1.5rem;
+    }
+
+    &__weight-input-form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        margin-top: 3rem;
+    }
+
+    &__weight-input {
+        margin-bottom: 3rem;
+        width: 100%;
+    }
+
+    &__weight-button {
+        background-color: $color-primary-dark;
+        color: $color-white;
+        padding: 4rem 40%;
+        border-radius: 1rem;
+        border: none;
+        cursor: pointer;
+        transition: all .2s;
+
+        &:hover {
+            background-color: $color-primary;
+        }
+
+        &:active {
+            background-color: $color-primary-dark;
+        }
+    }
 }
