--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2384,9 +2384,6 @@ body {
 }
 .home-page__dashboard-box {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 1rem;
   padding: 3rem;
@@ -2407,14 +2404,17 @@ body {
   box-shadow: 0 0.5rem 2rem rgba(0, 0, 0, 0.1);
   text-align: center;
   position: absolute;
-  top: -1.5rem;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .home-page__weight-input-form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   margin-top: 3rem;
+  height: 100%;
 }
 .home-page__weight-input {
   margin-bottom: 3rem;
@@ -2428,6 +2428,7 @@ body {
   border: none;
   cursor: pointer;
   transition: all 0.2s;
+  margin-bottom: 3rem;
 }
 .home-page__weight-button:hover {
   background-color: #2FCA82;
