--- a/src/sass/pages/_home-page.scss
+++ b/src/sass/pages/_home-page.scss
@@ -17,6 +17,9 @@
     &__recent-workouts-box {
         grid-column: 1 / -1;
         grid-row: 1 / -5;
+
+        // display: grid;
+        // grid-template-rows: repeat(7, 1fr);
     }
 
     &__weight-progress-box {
@@ -27,16 +30,12 @@
     &__weight-input-box {
         grid-row: -5 / -1;
         grid-column: -4 / -1;
-
     }
 
     // Styling
 
     &__dashboard-box {
         position: relative;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
         background-color: rgba($color-white, .5);
         border-radius: 1rem;
         padding: 3rem;
@@ -61,15 +60,18 @@
         text-align: center;
 
         position: absolute;
-        top: -1.5rem;
+        top: 0;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 
     &__weight-input-form {
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: flex-start;
+        justify-content: space-between;
         margin-top: 3rem;
+        height: 100%;
     }
 
     &__weight-input {
@@ -85,6 +87,7 @@
         border: none;
         cursor: pointer;
         transition: all .2s;
+        margin-bottom: 3rem;
 
         &:hover {
             background-color: $color-primary;
