Responsive labels in charts. Translations in home page.

--- a/src/sass/pages/_home-page.scss
+++ b/src/sass/pages/_home-page.scss
@@ -60,6 +60,7 @@
         border-radius: 1rem;
         box-shadow: 0 .5rem 2rem rgba($color-black, 0.1);
         text-align: center;
+        text-transform: uppercase;
 
         position: absolute;
         top: 0;
