--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2407,6 +2407,7 @@ body {
   border-radius: 1rem;
   box-shadow: 0 0.5rem 2rem rgba(0, 0, 0, 0.1);
   text-align: center;
+  text-transform: uppercase;
   position: absolute;
   top: 0;
   left: 50%;
