Included chart in exercise completer in a dirty way

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2120,13 +2120,15 @@ body {
 .exercise-completer__info-box {
   grid-column: info-start/info-end;
   display: grid;
-  grid-template-columns: [sets-start] 18% [sets-end weight-start] 1fr [weight-end reps-start] 1fr [reps-end];
+  grid-template-columns: [sets-start] 18% [sets-end weight-start] 1fr [weight-end reps-start] 50% [reps-end];
   grid-gap: 1rem;
   align-items: center;
   justify-items: center;
 }
 .exercise-completer__chart-box {
   grid-column: chart-start/chart-end;
+  max-height: 20rem;
+  max-width: 80rem;
 }
 .exercise-completer__title {
   font-size: 2rem;
