--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2111,16 +2111,17 @@ body {
 
 .exercise-completer {
   display: grid;
-  grid-template-columns: [info-start] 1fr [info-end chart-start] 1fr [chart-end];
+  grid-template-columns: [info-start] 1fr [info-end chart-start] 60% [chart-end];
   grid-gap: 2rem;
   padding: 2rem;
   background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 1rem;
   font-size: 1.6rem;
 }
 .exercise-completer__info-box {
   grid-column: info-start/info-end;
   display: grid;
-  grid-template-columns: [sets-start] 18% [sets-end weight-start] 1fr [weight-end reps-start] 50% [reps-end];
+  grid-template-columns: [sets-start] 18% [sets-end weight-start] 1fr [weight-end reps-start] minmax(9rem, 20%) [reps-end];
   grid-auto-rows: min-content;
   grid-gap: 1rem;
   align-items: center;
@@ -2129,8 +2130,10 @@ body {
 .exercise-completer__chart-box {
   grid-column: chart-start/chart-end;
   align-self: end;
-  height: 90%;
-  max-width: 80rem;
+  height: 95%;
+  width: 100%;
+  border-radius: 1rem;
+  background-color: rgba(221, 224, 222, 0.4);
 }
 .exercise-completer__title {
   font-size: 2rem;
@@ -2506,6 +2509,17 @@ body {
 .home-page__workout-name:active {
   background-color: #4BDE94;
   color: #fff;
+}
+
+.run-workout-page {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: min-content;
+  grid-auto-rows: min-content;
+  grid-gap: 4rem;
+  padding: 3rem 0;
+  padding-right: 3rem;
+  overflow-y: scroll;
 }
 
 /*# sourceMappingURL=style.css.map */
