--- a/src/sass/components/_exercise-completer.scss
+++ b/src/sass/components/_exercise-completer.scss
@@ -3,12 +3,12 @@
 .exercise-completer {
     display: grid;
 
-    grid-template-columns: [info-start] 1fr [info-end chart-start] 1fr [chart-end];
-    // grid-template-rows: [row-start] min-content [row-end];
+    grid-template-columns: [info-start] 1fr [info-end chart-start] 60% [chart-end];
     grid-gap: 2rem;
 
     padding: 2rem;
     background-color: rgba($color-white, .7);
+    border-radius: 1rem;
 
     font-size: 1.6rem;
 
@@ -16,7 +16,7 @@
         grid-column: info-start / info-end;
 
         display: grid;
-        grid-template-columns: [sets-start] 18% [sets-end weight-start] 1fr [weight-end reps-start] 50% [reps-end];
+        grid-template-columns: [sets-start] 18% [sets-end weight-start] 1fr [weight-end reps-start] minmax(9rem, 20%) [reps-end];
         grid-auto-rows: min-content;
         grid-gap: 1rem;
         align-items: center;
@@ -26,10 +26,10 @@
     &__chart-box {
         grid-column: chart-start / chart-end;
         align-self: end;
-        height: 90%;
-        // TODO remove and find a way to make chart responsive
-        max-width: 80rem;
-
+        height: 95%;
+        width: 100%;
+        border-radius: 1rem;
+        background-color: rgba($color-grey-light-2, .4);
     }
 
     &__title {
