--- a/src/sass/pages/_run-workout-page.scss
+++ b/src/sass/pages/_run-workout-page.scss
@@ -6,9 +6,10 @@
     grid-template-columns: 100%;
     grid-template-rows: min-content;
     grid-auto-rows: min-content;
-    grid-gap: 4rem;
+    grid-gap: 6rem;
 
     padding: 3rem 0;
+    padding-top: 6rem;
     padding-right: 3rem;
 
     overflow-y: scroll;
