--- a/src/sass/pages/_run-workout-page.scss
+++ b/src/sass/pages/_run-workout-page.scss
@@ -13,4 +13,26 @@
     padding-right: 3rem;
 
     overflow-y: scroll;
+
+    &__finish-button {
+        justify-self: center;
+        align-self: center;
+        padding: 3rem 6rem;
+        font-size: 2.2rem;
+        font-weight: 500;
+        border-radius: 1rem;
+        background-color: $color-primary;
+        color: $color-grey-light-3;
+        border: none;
+        cursor: pointer;
+        transition: all .2s;
+
+        &:hover {
+            background-color: $color-primary-dark;
+        }
+
+        &:active {
+            background-color: $color-primary-light;
+        }
+    }
 }
