--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -20,6 +20,8 @@ $color-grey-dark-5: #2d302e;
 $color-white: #fff;
 $color-black: #000;
 $color-red: #ea704e;
+$color-red-dark: #cd4925;
+$color-red-light: #f58b6d;
 $color-blue: #00c3d0; //05c1dc Also try these #, #02c4c4, #00c6b8
 
 // Measures
