--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2229,6 +2229,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 .popup-option-or-cancel__title {
   font-size: 1.8rem;
