--- a/src/sass/components/_popup-option-or-cancel.scss
+++ b/src/sass/components/_popup-option-or-cancel.scss
@@ -51,6 +51,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        text-align: center;
     }
 
     &__title {
