--- a/src/sass/components/_popup-option-or-cancel.scss
+++ b/src/sass/components/_popup-option-or-cancel.scss
@@ -9,6 +9,16 @@
     height: 100%;
     backdrop-filter: blur(.1rem) brightness(90%);
 
+    opacity: 1;
+    visibility: visible;
+
+    transition: all .2s;
+
+    &--hidden {
+        opacity: 0;
+        visibility: hidden;
+    }
+
     &__dialog {
         position: absolute;
         top: 50%;
