User can select exercises for new template

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2017,6 +2017,7 @@ body {
   grid-template-rows: min-content;
   grid-auto-rows: min-content;
   grid-gap: 2rem;
+  overflow-y: scroll;
 }
 .template-creator__input-box {
   display: flex;
