--- a/src/sass/components/_exercise-completer.scss
+++ b/src/sass/components/_exercise-completer.scss
@@ -83,6 +83,10 @@
 
     &__input {
         width: 90%;
+
+        &::placeholder {
+            color: $color-grey-dark-1;
+        }
     }
 
     &__weight,
