--- a/src/sass/pages/_home-page.scss
+++ b/src/sass/pages/_home-page.scss
@@ -101,6 +101,22 @@
         }
     }
 
+    &__weight-text-box {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.8rem;
+    }
+
+    &__current-weight {
+        font-weight: 600;
+        color: $color-primary-dark;
+
+        &::before {
+            content: " ";
+        }
+    }
+
     &__workout-name {
         display: flex;
         align-items: center;
