Add weight history chart and improve tick calculation logic

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2662,6 +2662,9 @@ body {
   justify-content: center;
   font-size: 1.8rem;
 }
+.home-page__weight-text {
+  text-align: center;
+}
 .home-page__current-weight {
   font-weight: 600;
   color: #03B670;
