--- a/src/sass/components/_register-form.scss
+++ b/src/sass/components/_register-form.scss
@@ -65,6 +65,11 @@
             transform: translateY(-1px);
             text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
         }
+
+        &--disabled {
+            color: $color-grey-dark-2 !important;
+            cursor: not-allowed;
+        }
     }
 
     &__form {
@@ -136,6 +141,25 @@
                 color: transparent;
             }
         }
+
+        &--disabled {
+            cursor: not-allowed;
+            background-color: $color-grey-light-2;
+            border-color: $color-grey-dark-3;
+            color: $color-grey-dark-3;
+
+            // Overwrite background color on autofill
+            &:-webkit-autofill,
+            &:-webkit-autofill:hover,
+            &:-webkit-autofill:focus {
+                -webkit-box-shadow: 0 0 0px 1000px $color-grey-light-2 inset;
+            }
+
+            &:hover {
+                border-color: $color-grey-dark-3;
+            }
+
+        }
     }
 
     &__input:focus+&__label--input-text,
@@ -196,6 +220,28 @@
             transform: translateY(0);
             box-shadow: 0 .25rem .5rem rgba($color-black, 0.05);
         }
+
+        &--disabled {
+            $backgroundImage: linear-gradient(to right,
+                    $color-grey-dark-2,
+                    $color-grey-light-1);
+            background-image: $backgroundImage;
+            cursor: not-allowed;
+            transform: none;
+            box-shadow: none;
+
+            &:hover {
+                background-image: $backgroundImage;
+                transform: none;
+                box-shadow: none;
+            }
+
+            &:active {
+                background-image: $backgroundImage;
+                transform: none;
+                box-shadow: none;
+            }
+        }
     }
 
     &__oauth-box {
@@ -224,6 +270,17 @@
             content: "\2713";
             font-size: 2rem;
             color: $color-white;
+        }
+
+        &--disabled {
+
+            &+.label-checkbox::before,
+            &:hover+.label-checkbox::before,
+            &:checked+.label-checkbox::before {
+                cursor: not-allowed;
+                background-color: $color-grey-light-2 !important;
+                border-color: $color-grey-dark-3 !important;
+            }
         }
     }
 
